[tool.poetry]
name = "wintoucher"
version = "0.1.0"
description = ""
authors = ["MaxMixAlex <MaxMixAlex@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pynput = "^1.7.6"
pywin32 = "^306"
pystray = "^0.19.5"

[tool.poetry.scripts]
wintoucher = "wintoucher.__main__:main"

[tool.poetry.group.dev.dependencies]
types-pywin32 = "^306.0.0.20240408"
types-pynput = "^1.7.5.20240423"
nuitka = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
