[tool.poetry]
name = "wintoucher"
version = "v0.1.0"
description = "Powered by Win32 API and tkinter, WinToucher is a Python application that allows you to simulate touch events on Windows through keyboard input."
license = "MIT"
authors = ["MaxMixAlex <MaxMixAlex@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/zyf722/wintoucher"
keywords = ["windows", "multitouch", "touchscreen", "touch", "tkinter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing"
]

[tool.poetry.dependencies]
python = "^3.8"
pynput = "^1.7.6"
pywin32 = "^306"
pystray = "^0.19.5"

[tool.poetry.scripts]
wintoucher = "wintoucher.__main__:main"

[tool.poetry.group.dev.dependencies]
types-pywin32 = "^306.0.0.20240408"
types-pynput = "^1.7.5.20240423"
nuitka = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
